# rawjson

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
deserialize/: rawjson_deserialize.c
include/: rawjson.h  rawjson_deserialize.h  rawjson_micro.h  rawjson_serialize.h
serialize/: branchlut2.c  ctype_serialize.h  interger.c  rawjson_serialize.c  test.c
test/: test.c  test_derserialize.c
